--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <div class="about-text reveal">
                 <p>Computer Engineering student at Notre Dame building AI-powered agricultural technology through Namani Tech. Our platform integrates ML models, IoT sensors, and satellite imagery to deliver real-time decision support for farmers across three countries.</p>
-                <p>Experience spans software engineering at PwC, quantitative trading at Weiss Asset Management, and winning UBS's Technology Pitch Competition. From ML-driven advertising workflows to algorithmic investment engines, I ship production systems that solve real problems.</p>
+                <p>Experience spans software engineering at PwC, product management at Weiss Asset Management and Diive Consulting, and winning UBS's Technology Pitch Competition. From ML-driven advertising workflows to algorithmic investment engines, I ship systems and products that solve real problems.</p>
             </div>
         </div>
     </section>
@@ -267,15 +267,15 @@
             </div>
             <div class="experience-item reveal">
                 <div><div class="exp-company">Weiss Asset Management</div><div class="exp-location">Boston, MA</div><div class="exp-period">Nov 2023 - Jan 2024</div></div>
-                <div><div class="exp-role">Quantitative Trader Fellow</div><div class="exp-description">Selected as one of eight fellows for intensive quantitative trading program. Built and evaluated algorithmic trading strategies using statistical modeling and factor research.</div><div class="exp-tools">Python, SQL, Linux, Pandas, NumPy, VBA/Excel, Bloomberg Terminal, Backtesting</div></div>
+                <div><div class="exp-role">Product Fellow</div><div class="exp-description">Selected as one of eight fellows for intensive quantitative trading program. Built and evaluated algorithmic trading strategies using statistical modeling and factor research.</div><div class="exp-tools">Python, SQL, Linux, Pandas, NumPy, VBA/Excel, Bloomberg Terminal, Backtesting</div></div>
             </div>
             <div class="experience-item reveal">
                 <div><div class="exp-company">Diive Consulting</div><div class="exp-location">Cape Town, South Africa</div><div class="exp-period">June 2023 - August 2023</div></div>
-                <div><div class="exp-role">Data Scientist Intern</div><div class="exp-description">Designed and deployed a distributed procurement platform linking restaurants to fisheries, enabling scalable, data-driven seafood sourcing across 10+ partners.</div><div class="exp-tools">Java, JavaScript, Linux, React.js, R, Git, Distributed Systems, CI/CD</div></div>
+                <div><div class="exp-role">Product Management Intern</div><div class="exp-description">Designed and deployed a distributed procurement platform linking restaurants to fisheries, enabling scalable, data-driven seafood sourcing across 10+ partners.</div><div class="exp-tools">Java, JavaScript, Linux, React.js, R, Git, Distributed Systems, CI/CD</div></div>
             </div>
             <div class="experience-item reveal">
                 <div><div class="exp-company">UBS</div><div class="exp-location">New York, NY</div><div class="exp-period">March 2023 - May 2023</div></div>
-                <div><div class="exp-role">UBS Technology Pitch Competition Winner</div><div class="exp-description">Built an algorithmic investment-ranking engine in C++ and Java incorporating ESG metrics for large-scale asset evaluation.</div><div class="exp-tools">C++, Java, JavaScript, MATLAB, TensorFlow, Algorithm Design, Financial Modeling</div></div>
+                <div><div class="exp-role">UBS Product Competition Winner</div><div class="exp-description">Built an algorithmic investment-ranking engine in C++ and Java incorporating ESG metrics for large-scale asset evaluation.</div><div class="exp-tools">C++, Java, JavaScript, MATLAB, TensorFlow, Algorithm Design, Financial Modeling</div></div>
             </div>
             <div class="experience-item reveal">
                 <div><div class="exp-company">Goldman Sachs</div><div class="exp-location">New York, NY</div><div class="exp-period">Jan 2023 - Jan 2024</div></div>
