--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="hero-content">
             <div class="hero-text">
                 <div class="hero-eyebrow">Computer Engineer & Entrepreneur</div>
-                <h1>Building <em>systems</em><br>that <span class="gradient-text">matter</span></h1>
+                <h1>Building <em>products</em><br>that <span class="gradient-text">matter</span></h1>
                 <p class="hero-description">Hesburgh-Yusko Scholar at Notre Dame. CEO at Namani Tech. Shipping production AI systems from chip design to cloud deployment.</p>
                 <div class="hero-stats">
                     <div class="stat"><span class="stat-value">20+</span><span class="stat-label">Engineering Projects</span></div>
